@@ -67,7 +67,9 @@ University of Exeter Astrophysics Group (http://www.astro.ex.ac.uk/)
 as part of his work for the eSTAR project.
 
 The latest version of the module includes patches supplied by Stephen
-Quinney <S.J.Quinney@durham.ac.uk> of Durham University.
+Quinney <S.J.Quinney@durham.ac.uk> of Durham University, and Brad
+Cavanagh <b.cavanagh@jach.hawaii.edu> of the Joint Astronomy Centre
+in Hawaii.
 
 License
 -------
